--- a/AnbarBankManagment/DeviceTypeList.xaml
+++ b/AnbarBankManagment/DeviceTypeList.xaml
@@ -67,7 +67,7 @@
         <Label Content=" : تعداد نوع دستگاه  " HorizontalAlignment="Left" Margin="401,61,0,0" VerticalAlignment="Top"/>
         <Label Content="120000  " HorizontalAlignment="Left" Margin="351,62,0,0" VerticalAlignment="Top"/>
 
-        <DataGrid HorizontalAlignment="Left" Height="333" Margin="24,144,0,0" VerticalAlignment="Top" Width="753">
+        <DataGrid Name="devicetypelist" HorizontalAlignment="Left" FlowDirection="RightToLeft" Height="333" Margin="24,144,0,0" VerticalAlignment="Top" Width="753">
             <DataGrid.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                     <GradientStop Color="#FFE6EEE3" Offset="0"/>
@@ -75,6 +75,10 @@
                     <GradientStop Color="#99C7FBB7" Offset="0.909"/>
                 </LinearGradientBrush>
             </DataGrid.Background>
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="شماره" Binding="{Binding ID}" Width="200"/>
+                <DataGridTextColumn Header="نام" Binding="{Binding Name}" Width="200"/>
+            </DataGrid.Columns>
         </DataGrid>
 
 
